syntax = "proto3";

option java_multiple_files = true;
option java_package = "ua.edu.ucu";
option java_outer_classname = "LoggerService";

service Logger {
  rpc AppendMessage (AppendMessageRequest) returns (AppendMessageResponse) {}
  rpc ListMessages (ListMessagesRequest) returns (ListMessagesResponse) {}
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {}
}

message LogMessage {
  int32 id = 1;
  string log = 2;
  int32 writeConcern = 3;
}

// idempotent on secondary
message AppendMessageRequest {
  LogMessage log = 1;
}

message AppendMessageResponse {
  AppendResponseCode responseCode = 1;
  string responseMessage = 2;
}

enum AppendResponseCode {
  OK = 0;
  // some logical errors from master
  ERROR_WRITECONCERN = 1;
  // some logical errors from secondary
  // we do not update logs
  ERROR_LOG_WITH_ID_ALREADY_EXISTS = 2;
  ERROR_NO_QUORUM_IN_CLUSTER = 3;
}

message ListMessagesRequest {
}

message ListMessagesResponse {
  repeated LogMessage logs = 1;
}

message HealthCheckRequest {
}

message HealthCheckResponse {
  HealthCheckStatus status = 1;
}

enum HealthCheckStatus {
  HEALTHY = 0;
  SUSPECTED = 1;
  UNHEALTHY = 2;
}